@@ -4,6 +4,7 @@ import com.jaecheop.backgollajyu.socialLogin.CustomOAuth2UserService;
 import com.jaecheop.backgollajyu.socialLogin.Oauth2LoginSuccessHandler;
 import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
+import org.apache.tomcat.util.file.ConfigurationSource;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -16,6 +17,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -26,56 +28,58 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("https://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE"));
+        configuration.setAllowCredentials(true);
+        configuration.setAllowedOrigins(List.of());
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+        configuration.setExposedHeaders(Arrays.asList("set-cookie"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http.csrf(AbstractHttpConfigurer::disable); // csrf
-        http.cors(AbstractHttpConfigurer::disable); // cors
+//        http.cors(AbstractHttpConfigurer::disable); // cors
+        http.cors(httpSecurityCorsConfigurer -> httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource()));
         http.authorizeHttpRequests(
                 authorizeRequests ->
                         authorizeRequests.anyRequest().permitAll()
         );
 
         http.oauth2Login(oauth2Login ->
-                oauth2Login
-                        .successHandler(
-                                 oauth2LoginSuccessHandler()
-                        )
-                        .failureHandler((request, response, exception) -> {
-                            System.out.println("fail");
-                        })
-                        .userInfoEndpoint(userInfoEndpoint ->
-                                userInfoEndpoint
-                                        .userService(customOAuth2UserService)
-                        )
+                        oauth2Login
+                                .successHandler(
+                                        oauth2LoginSuccessHandler()
+                                )
+                                .failureHandler((request, response, exception) -> {
+                                    System.out.println("fail");
+                                })
+                                .userInfoEndpoint(userInfoEndpoint ->
+                                        userInfoEndpoint
+                                                .userService(customOAuth2UserService)
+                                )
 //                        .defaultSuccessUrl("/members/addInfo")// 리다이렉트 할 URL
         );
 
         // 여기서부터 로그아웃 API 내용~!
         http.logout(logout ->
                 logout.logoutUrl("/members/logout")   // 로그아웃 처리 URL (= form action url)
-                //.logoutSuccessUrl("/login") // 로그아웃 성공 후 targetUrl,
-                // logoutSuccessHandler 가 있다면 효과 없으므로 주석처리.
-                .addLogoutHandler((request, response, authentication) -> {
-                    // 사실 굳이 내가 세션 무효화하지 않아도 됨.
-                    // LogoutFilter가 내부적으로 해줌.
-                    HttpSession session = request.getSession();
-                    if (session != null) {
-                        session.invalidate();
-                    }
-                })  // 로그아웃 핸들러 추가
-                .logoutSuccessHandler((request, response, authentication) -> {
-                    response.sendRedirect("/members/login");
-                }) // 로그아웃 성공 핸들러
-                .deleteCookies("gollajyu-cookie")
+                        //.logoutSuccessUrl("/login") // 로그아웃 성공 후 targetUrl,
+                        // logoutSuccessHandler 가 있다면 효과 없으므로 주석처리.
+                        .addLogoutHandler((request, response, authentication) -> {
+                            // 사실 굳이 내가 세션 무효화하지 않아도 됨.
+                            // LogoutFilter가 내부적으로 해줌.
+                            HttpSession session = request.getSession();
+                            if (session != null) {
+                                session.invalidate();
+                            }
+                        })  // 로그아웃 핸들러 추가
+                        .logoutSuccessHandler((request, response, authentication) -> {
+                            response.sendRedirect("/members/login");
+                        }) // 로그아웃 성공 핸들러
+                        .deleteCookies("gollajyu-cookie")
         ); // 로그아웃 후 삭제할 쿠키 지정
-
-
 
 
 //        //OAuth 2.0 기반 인증을 처리하기위해 Provider와의 연동을 지원
